# Clock-OpenGL

./: .gitignore  CMakeLists.txt  main.cpp
product/: clock.c  clock.h  cube.c  cube.h  lRack.c  lRack.h  lTip.c  lTip.h  pendulum.c  pendulum.h  sTip.c  sTip.h  wahadlo.c  wahadlo.h
src/: CMakeLists.txt  Clock.cpp  Clock.h  Object.cpp  Object.h  Rack.cpp  Rack.h  fshader.txt  loader.cpp  lodepng.cpp  shaderprogram.cpp  vshader.txt
